Changelog
=========

3.2a2 - UNRELEASED
------------------

- For RTL languages adjusted document content padding so welcome
  text fits inside text area. Closes
  http://dev.plone.org/plone/ticket/6919
  [emanlove]

- For RTL languages shifted portrait photo to the left.
  Closes http://dev.plone.org/plone/ticket/6214
  [emanlove]

- Added 'context' as an alias for 'object' in action expressions.
  [davisagli]

- Include missing dependency on plone.app.locales.
  [hannosch]

- Fixed Forbidden error when attempting to login for the first time as a newly
  created user, if the must_change_password property has been added (as a
  Boolean) to the portal_memberdata tool and set to True.
  Closes http://dev.plone.org/plone/ticket/8425
  [hexsprite]

- Moved plone specific diff tool configuration back to Plone default
  profile, since it's both plone specific and was never actually added
  to CMFDiffTool.
  Closes http://dev.plone.org/plone/ticket/8590
  [alecm]

- Fixed the toc.js to not turn heading text containing an "@" into the link.
  Closes http://dev.plone.org/plone/ticket/7949
  [sbruno, calvinhp]

- Fixed the form_tabbing to use the correct buttons names. Closes
  http://dev.plone.org/plone/ticket/7559
  [lucie, calvinhp]

- Gave RTL.css higher priority within the stylesheet registry.
  Closes http://dev.plone.org/plone/ticket/8505
  [emanlove]

- For RTL languages shifted Info Bar to the right.
  Closes http://dev.plone.org/plone/ticket/8140
  [emanlove]

- For RTL languages shifted comment icon to the right.
  Closes http://dev.plone.org/plone/ticket/6366
  [emanlove]

3.2a1 - October 11, 2008
------------------------

- Take getNotAddableTypes into account when determining if the editable
  border should be shown.
  [wichert]

- First fully eggified Plone release (ignoring the not yet eggified
  Zope2).
  [wichert]


3.1.6 - October 7, 2008
-----------------------

- PloneTool.reindexOnReorder: Don't fail if the catalog contains stale
  entries.
  [stefan]
