@@ -332,6 +332,21 @@ dt span.documentByLine {
 .livesearchContainer {
     right: auto;
     left: 0px;
+    text-align: right;
+}
+.LSDescr {
+    margin-left: 0;
+    margin-right: 2.5em;
+}
+#livesearchLegend {
+    margin-left: 0;
+    margin-right: -0.1em;
+}
+/* IE6 Hack */
+/* Resolves issue with down arrow character under IE6, See
+   http://dev.plone.org/plone/ticket/4632                  */
+* html #livesearchLegend{
+    font-family: Times New Roman;
 }
 
 /* Kupu fixes */
