@@ -4,6 +4,10 @@ Changelog
 3.2a2 - UNRELEASED
 ------------------
 
+- Cleaned up Livesearch results for RTL Languages.
+  Closes http://dev.plone.org/plone/ticket/4632
+  [emanlove]
+
 - For RTL languages adjusted document content padding so welcome
   text fits inside text area. Closes
   http://dev.plone.org/plone/ticket/6919
